--- a/activity/mi-primera-pagina-web/index.html
+++ b/activity/mi-primera-pagina-web/index.html
@@ -18,78 +18,71 @@
   <header class="container-fluid header">
     <h1><span>Mi primera</span><br>página web</h1>
   </header>
-  <main class="container remember-cards">
+  <main class="container">
     <div class="row">
-      <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-1.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Cocinando con papá</h5>
-            <p class="card-text">Euismod dui mi ligula imperdiet morbi fames massa bibendum, ac taciti interdum est ullamcorper eu inceptos ridiculus, pretium sociis dis mollis dapibus lectus vulputate.</p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-2.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Arreglando la casa</h5>
-            <p class="card-text">Donec torquent ac sed tortor sodales magna, vestibulum inceptos volutpat nostra parturient maecenas, turpis nulla tristique eget ante.</p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-3.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Haciendo Ejercicios</h5>
-            <p class="card-text">Pharetra ligula fringilla suscipit facilisi vel luctus mus donec lobortis, felis justo sapien rhoncus placerat parturient ornare aptent.</p>
-
-          </div>
-        </div>
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-1.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
       </div>
-      <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-4.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Cuando hicimos el aseo "juntos"</h5>
-            <p class="card-text">Morbi ultrices odio semper a fames gravida, magnis blandit enim curabitur imperdiet suscipit, praesent auctor facilisi nam rhoncus.</p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-5.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Asado en el parque</h5>
-            <p class="card-text">Donec magna accumsan molestie torquent congue feugiat, per bibendum mus laoreet eget ridiculus, facilisi vel parturient non facilisis.</p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-6.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Mis primeros cuentos</h5>
-            <p class="card-text">Tellus etiam quisque ligula eu fusce magnis inceptos scelerisque varius, nec elementum consequat nisi vulputate suscipit lacinia integer.</p>
-          </div>
-        </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-2.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
       </div>
-      <div class="card-deck">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-7.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Fiesta de Halloween</h5>
-            <p class="card-text">Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-8.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Cenando Juntos</h5>
-            <p class="card-text">Eu sollicitudin eros aliquet aptent quisque hac, malesuada mollis facilisis a interdum phasellus, pellentesque vehicula feugiat. elementum ligula.</p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="assets/img/img-9.jpg" alt="imagen día del papá">
-          <div class="card-body">
-            <h5 class="card-title">Cuando gané por primera vez</h5>
-            <p class="card-text">Purus massa turpis auctor vel litora potenti, ultrices velit eu leo sodales consequat, class urna convallis neque malesuada.</p>
-          </div>
-        </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-3.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
       </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-4.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
+      </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-5.jpg" class="img-fluid" alt="">
+        <h5>Aliquet sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
+      </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-6.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
+      </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-7.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
+      </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-8.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
+      </div>
+      <!--/Col-->
+      <!--Col-->
+      <div class="col-md-4">
+        <img src="assets/img/img-9.jpg" class="img-fluid" alt="">
+        <h5>Aliquet lectus sollicitudin nulla libero</h5>
+        <p>Aliquet lectus sollicitudin nulla libero diam luctus pharetra tempor maecenas, per tellus etiam class purus quam et mus</p>
+      </div>
+      <!--/Col-->
     </div>
   </main>
 <footer>
